Fix alignment in the level block

--- a/src/components/SettingsManager/Profile.css
+++ b/src/components/SettingsManager/Profile.css
@@ -1,3 +1,7 @@
+.SettingsPanelProfile {
+  display: flex;
+}
+
 .SettingsPanelProfile-username {
   font-size: 120%;
   font-weight: normal;
@@ -14,6 +18,7 @@
   display: inline-block;
   padding-inline-start: 20px;
   vertical-align: top;
+  flex-grow: 1;
 }
 
 .SettingsPanelProfile-levelblock {
